--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,8 @@
   align-items: center;
   padding-top: 28px;
   width: 92.5%;
+  border-style: dashed;
+  border-color: black;
 }
 
 @media screen and (max-width: 1024px) {
