--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,4 +1,5 @@
 .cover__subtitle {
+  padding: 0;
   margin: 0 0 0 0;
   max-width: 360px;
   font-weight: 400;
@@ -7,9 +8,10 @@
   line-height: 22px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
+    max-width: 288px;
   }
 }
