--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,29 +1,17 @@
 .cover__title {
-  margin: 245px auto 32px auto;
+  margin: 0 0 0 0;
   max-width: 560px;
   height: fit-content;
-  font-weight: 800;
+  font-weight: 900;
   font-size: 72px;
   text-align: center;
   line-height: 76px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 767px) {
   .cover__title {
-    margin: 195px auto 32px auto;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__title {
-    margin: 115px auto 32px auto;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .cover__title {
-    margin: 33px auto 16px auto;
     font-size: 32px;
     line-height: 35px;
+    max-width: 288px;
   }
 }
