--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,30 +4,35 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 1184px;
-  height: 740px;
+  object-fit: cover;
+  max-width: 1184px;
+  min-height: 740px;
   z-index: 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .cover {
-    width: 100%;
-    height: 640px;
+    max-width: 1024px;
+    min-height: 640px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .cover {
     margin: 90px 0 88px 0;
-    width: 100%;
-    height: 480px;
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover {
+    margin: 66px 0 64px 0;
+    min-height: 200px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover {
-    margin: 66px 0 64px 0;
-    width: 100%;
-    height: 200px;
+    max-width: 320px;
   }
 }
