--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,15 +8,15 @@
   font-weight: 400px;
 }
 
-@media screen and (max-width: 320px) {
+.footer__link:last-child {
+  margin: 0;
+}
+
+@media screen and (max-width: 767px) {
   .footer__link {
     margin: 0 0 32px 0;
     font-size: 24px;
     line-height: 24px;
-  }
-
-  .footer__link:nth-child(5) {
-    margin: 0;
   }
 }
 
