--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,4 +1,5 @@
 .lead__caption {
+  margin: 8px auto 0 0;
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
@@ -7,14 +8,14 @@
   text-transform: uppercase;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .lead__caption {
-    margin: 8px 0 0 24px;
+    margin: 8px auto 0 24px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .lead__caption {
-    margin: 8px 0 0 24px;
+    margin: 8px auto 0 16px;
   }
 }
