--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,14 +8,13 @@
   line-height: 36px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1279px) {
   .lead__subtitle {
-    font-size: calc(16px + 14 * (100vw - 320px) / 448);
-    line-height: calc(20px + 16 * (100vw - 320px) / 448);
-}
+    margin: 0 auto 56px auto;
+  }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .lead__subtitle {
     margin: 0 auto 40px auto;
     font-size: 16px;
