--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,22 +3,17 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  max-width: 76.88%;
+  max-width: 984px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .lead {
-    max-width: 90.6%;
+    max-width: 928px;
+    margin: 48px auto 0 auto;
   }
 }
 
-@media screen and (max-width: 768px) {
-  .lead {
-    max-width: 93.75%;
-  }
-}
-
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1023px) {
   .lead {
     max-width: 100%;
   }
