--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,11 +1,12 @@
 .page {
-  background-color: #2A2C2F;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   margin: 0;
   min-width: 320px;
   max-width: 1280px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
