--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,20 +8,24 @@
   grid-auto-rows: 1fr;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .photo-grid {
     max-width: 90.6%;
+    gap: 14px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .photo-grid {
     max-width: 93.75%;
+    margin: 0 auto 88px auto;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .photo-grid {
     max-width: 90%;
+    margin: 0 auto 64px auto;
+    gap: 12px;
   }
 }
