--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,7 +5,7 @@
   object-fit: cover;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .place__image {
     margin: 0 32px 0 0;
     max-width: 440px;
@@ -13,11 +13,19 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .place__image {
     margin: 0 28px 0 0;
     max-width: 340px;
     max-height: 340px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__image {
+    margin: 0 0 0 16px;
+    max-width: 320px;
+    max-height: 320px;
   }
 }
 
