--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -5,11 +5,12 @@
   font-size: 18px;
   line-height: 22px;
   text-decoration: underline;
+  transition: opacity 0.5s linear;
 }
 
+@media (any-hover: hover) {
 .place__link:hover {
-  color: rgba(255,255,255,0.8);
-  transition-property: color;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
+  opacity: 0.8;
+  transition: opacity 0.2s linear;
+  }
 }
