--- a/blocks/place/__paragraph/paragraph.css
+++ b/blocks/place/__paragraph/paragraph.css
@@ -8,39 +8,28 @@
   line-height: 1.63;
 }
 
-.place__paragraph:nth-child(2) {
+.place__paragraph:last-child {
   margin: 0 0 0 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .place__paragraph {
     margin: 0 0 26px 0;
-    max-width: 456px;
-  }
-
-  .place__paragraph:nth-child(2) {
-    margin: 0 0 0 0;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .place__paragraph {
     margin: 0 0 25px 0;
     font-size: 16px;
-    max-width: 352px;
-  }
-
-  .place__paragraph:nth-child(2) {
-    margin: 0 0 0 0;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .place__paragraph {
-    margin: 32px auto 25px auto;
-    max-width: 288px;
+    margin: 0 16px 25px 16px;
   }
 
-  .place__paragraph:nth-child(2) {
+  .place__paragraph:last-child {
     margin: 0 16px 0 16px;
   }
 }
