--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,33 +1,32 @@
 .place__title {
   margin: 0 40px 48px 0;
-  font-weight: 800;
+  font-weight: 900;
   font-size: 72px;
   line-height: 76px;
-  width: 460px;
+  max-width: 460px;
+  width: 100%;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .place__title {
     margin: 0 32px 48px 0;
-    width: 440px;
+    max-width: 440px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .place__title {
     margin: 0 28px 48px 0;
-    width: 340px;
-    font-weight: 800;
+    max-width: 340px;
     font-size: 42px;
     line-height: 46px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .place__title {
     margin: 0 16px 32px 16px;
-    width: 288px;
-    font-weight: 800;
+    max-width: 288px;
     font-size: 32px;
     line-height: 35px;
   }
