--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,17 +1,19 @@
 .place__website {
   margin: 0 0 48px 0;
+  display: flex;
+  flex-direction: column;
   align-self: flex-end;
   max-width: 456px;
-
+  gap: 12px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .place__website {
     max-width: 352px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .place__website {
     max-width: 288px;
     margin: 0 16px 32px 16px;
