--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,8 +1,24 @@
 .place {
   padding: 0;
   margin: 0;
-  display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(460px, 1fr));
+}
+
+@media screen and (max-width: 1279px) {
+  .place {
+    grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place {
+    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  }
 }
