--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,7 +5,7 @@
   color: white;
   font-size: 16px;
   line-height: 18px;
-  font-weight: 400px;
+  font-weight: 400;
 }
 
 .footer__link:last-child {
