--- a/blocks/place/__paragraph/paragraph.css
+++ b/blocks/place/__paragraph/paragraph.css
@@ -1,7 +1,7 @@
 .place__paragraph {
   display: flex;
   flex-direction: column;
-  margin: 0 0 26px 0;
+  margin: 0 0 0 0;
   max-width: 484px;
   font-weight: 400;
   font-size: 18px;
@@ -12,24 +12,18 @@
   margin: 0 0 0 0;
 }
 
-@media screen and (max-width: 1279px) {
-  .place__paragraph {
-    margin: 0 0 26px 0;
-  }
-}
-
 @media screen and (max-width: 1023px) {
   .place__paragraph {
-    margin: 0 0 25px 0;
+    margin: 0 0 0 0;
     font-size: 16px;
   }
 }
 @media screen and (max-width: 767px) {
   .place__paragraph {
-    margin: 0 16px 25px 16px;
+    margin: 0 0 0 0;
   }
 
   .place__paragraph:last-child {
-    margin: 0 16px 0 16px;
+    margin: 0 0 0 0;
   }
 }
