--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,5 @@
 .cover {
-  margin: 92px auto 92px auto;
+  margin: 0 auto 92px auto;
   background-image: url(../../images/__background.jpg);
   background-position: center;
   background-repeat: no-repeat;
@@ -7,6 +7,7 @@
   object-fit: cover;
   max-width: 1184px;
   min-height: 740px;
+  width: 100%;
   z-index: 0;
 }
 
@@ -19,14 +20,15 @@
 
 @media screen and (max-width: 1023px) {
   .cover {
-    margin: 90px 0 88px 0;
+    margin: 0 auto 88px auto;
+    max-width: 768px;
     min-height: 480px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .cover {
-    margin: 66px 0 64px 0;
+    margin: 0 auto 64px auto;
     min-height: 200px;
   }
 }
