--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -25,5 +25,7 @@
 @media screen and (max-width: 767px) {
   .footer {
     width: 90%;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
