--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,7 +4,15 @@
   font-size: 24px;
   line-height: 28px;
   font-weight: 400;
+  transition: opacity 0.5s linear;
 }
+
+@media (any-hover: hover) {
+  .header__lang-link:hover {
+  opacity: 0.8;
+  transition: opacity 0.2s linear;
+  }
+  }
 
 @media screen and (max-width: 767px) {
   .header__lang-link {
