--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -1,6 +1,13 @@
 .header__links {
+  margin: 18px 0 0 0;
   display: flex;
   gap: 18px;
   list-style-type: none;
   padding: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .header__links {
+    margin: 14px 0 0 0;
+  }
 }
