--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,23 +1,24 @@
 .intro {
   max-width: 690px;
-  margin: 92px auto 92px 148px;
+  margin: 0 442px 0 148px;
   color: white;
 }
 
 @media screen and (max-width: 1279px) {
   .intro {
-    margin: 92px auto 92px 48px;
+    margin: 0 286px 0 48px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .intro {
-    margin: 88px 24px 88px 24px;
+    max-width: 720px;
+    margin: 0 auto 0 auto;
   }
 }
 
 @media screen and (max-width: 767px) {
   .intro {
-    margin: 64px 16px 64px 16px;
+    margin: 0 16px 0 16px;
   }
 }
