--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
-  margin: 0;
+  margin: 0 auto 0 auto;
   min-width: 320px;
   max-width: 1280px;
   display: flex;
