--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,5 @@
 .photo-grid {
-  margin: 0 auto 92px auto;
+  margin: 0 auto 0 auto;
   max-width: 1184px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
@@ -18,14 +18,14 @@
 @media screen and (max-width: 1023px) {
   .photo-grid {
     max-width: 720px;
-    margin: 0 auto 88px auto;
+    margin: 0 auto 0 auto;
   }
 }
 
 @media screen and (max-width: 767px) {
   .photo-grid {
     max-width: 90%;
-    margin: 0 auto 64px auto;
+    margin: 0 auto 0 auto;
     gap: 12px;
   }
 }
