--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,5 @@
 .place__image {
-  margin: 0 40px 0 0;
+  margin: 0 0 0 0;
   max-width: 460px;
   max-height: 460px;
   object-fit: cover;
@@ -7,7 +7,7 @@
 
 @media screen and (max-width: 1279px) {
   .place__image {
-    margin: 0 32px 0 0;
+    margin: 0 0 0 0;
     max-width: 440px;
     max-height: 440px;
   }
@@ -15,7 +15,7 @@
 
 @media screen and (max-width: 1023px) {
   .place__image {
-    margin: 0 28px 0 0;
+    margin: 0 0 0 0;
     max-width: 340px;
     max-height: 340px;
   }
@@ -23,7 +23,7 @@
 
 @media screen and (max-width: 767px) {
   .place__image {
-    margin: 0 0 0 16px;
+    margin: 0 0 0 0;
     max-width: 320px;
     max-height: 320px;
   }
