--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,9 +1,11 @@
 .place__paragraphs {
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
 }
 
-@media screen and (max-width: 639px) {
+@media screen and (max-width: 767px) {
   .place__paragraphs {
-    margin: 32px 0 0 0;
+    margin: 0 16px 0 16px;
   }
 }
