--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,5 @@
 .place__title {
-  margin: 0 40px 48px 0;
+  margin: 0 0 0 0;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
@@ -9,14 +9,12 @@
 
 @media screen and (max-width: 1279px) {
   .place__title {
-    margin: 0 32px 48px 0;
     max-width: 440px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .place__title {
-    margin: 0 28px 48px 0;
     max-width: 340px;
     font-size: 42px;
     line-height: 46px;
@@ -25,7 +23,7 @@
 
 @media screen and (max-width: 767px) {
   .place__title {
-    margin: 0 16px 32px 16px;
+    margin: 0 16px 0 16px;
     max-width: 288px;
     font-size: 32px;
     line-height: 35px;
