--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,5 +1,5 @@
 .place__website {
-  margin: 0 0 48px 0;
+  margin: 0 0 0 0;
   display: flex;
   flex-direction: column;
   align-self: flex-end;
@@ -16,6 +16,6 @@
 @media screen and (max-width: 767px) {
   .place__website {
     max-width: 288px;
-    margin: 0 16px 32px 16px;
+    margin: 0 16px 0 16px;
   }
 }
