--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,7 @@
 .places {
   margin: 0 auto 0 auto;
   max-width: 984px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 80px;
@@ -23,7 +24,7 @@
 
 @media screen and (max-width: 767px) {
   .places {
-    max-width: 100%;
+    max-width: 320px;
     gap: 50px;
   }
 }
