--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,12 +1,12 @@
 .intro {
   max-width: 690px;
-  margin: 0 442px 0 148px;
+  margin: 0 auto 0 148px;
   color: white;
 }
 
 @media screen and (max-width: 1279px) {
   .intro {
-    margin: 0 286px 0 48px;
+    margin: 0 auto 0 48px;
   }
 }
 
