--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,14 +2,14 @@
   padding: 0;
   margin: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(460px, 1fr));
+  grid-template-columns: 460px 1fr;
   width: 100%;
   gap: 48px 40px;
 }
 
 @media screen and (max-width: 1279px) {
   .place {
-    grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+    grid-template-columns: 440px 1fr;
     gap: 48px 32px;
   }
 }
